--- a/src/app/Manager/display-mes-postes/display-mes-postes.component.html
+++ b/src/app/Manager/display-mes-postes/display-mes-postes.component.html
@@ -280,52 +280,60 @@
  
      </select>
    </div> -->
-   <div  class="table-responsive" >
-     
-     <table class="table table-striped card-table">
-       <thead>
-         <tr>
-          <th>Ref</th>
-           <th>Poste</th>
-           <th>Competences</th>
-           <th>Type de <br> Contrat </th>
-           <th>Action</th> 
-         </tr>
-       </thead>
-       <tbody>
-         <tr *ngFor="let poste of approvedPostes ">
-          <td class="poste-titre">#{{ poste.id }}</td>
+ <!-- Search Input -->
+<div class="d-flex justify-content-end mb-3">
+  <input type="text" [(ngModel)]="searchTerm" class="form-control" placeholder="Rechercher par titre de poste" (input)="filterPostes()">
+</div>
 
-           <td class="poste-titre">{{ poste.titre }}</td>
-           <td *ngIf="poste.competences && poste.competences.length > 0">
-             <div class="pill-container">
-                <ng-container *ngFor="let competence of poste.competences; let i = index">
-                  <span *ngIf="i < 3 || showAllCompetences" class="pill" >
-                    {{ competence.nom }}
-                  </span>
-                </ng-container>
-                <a *ngIf="poste.competences.length > 3 && !showAllCompetences" (click)="toggleCompetences()" class="view-more-link">Voir plus</a>
-                <a *ngIf="poste.competences.length > 3 && showAllCompetences" (click)="toggleCompetences()" class="view-less-link">Voir moins</a>
-             </div>
-            </td>
-            <td class="poste-titre">{{ poste.typeContrat }}</td>
-<td>        
-   <button (click)="ToPostId(poste.id)" type="button" class="btn btn-inverse-info btn-icon">
-      <i class="mdi mdi mdi-eye      "></i>
-    </button> 
-    &nbsp;
-    <button (click)="ToEdit(poste.id)" type="button" class="btn btn-inverse-primary btn-icon">
-      <i class="mdi mdi mdi-pencil-box "></i>
-    </button>
-    &nbsp;
-    <button (click)="onDelete(poste.id)" type="button" class="btn btn-inverse-danger btn-icon">
-      <i class="mdi mdi mdi-trash-can     "></i>
-    </button></td>
-         
-         </tr>
-       </tbody>
-     </table>
-   </div>
+<!-- Table -->
+<div class="table-responsive">
+  <table class="table table-striped card-table">
+    <thead>
+      <tr>
+        <th>Ref</th>
+        <th>Poste</th>
+        <th>Competences</th>
+        <th>Type de <br> Contrat </th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody *ngIf="filteredPostes && filteredPostes.length > 0; else noPosts">
+      <tr *ngFor="let poste of filteredPostes">
+        <td class="poste-titre">#{{ poste.id }}</td>
+        <td class="poste-titre">{{ poste.titre }}</td>
+        <td *ngIf="poste.competences && poste.competences.length > 0">
+          <div class="pill-container">
+            <ng-container *ngFor="let competence of poste.competences; let i = index">
+              <span *ngIf="i < 3 || showAllCompetences" class="pill">
+                {{ competence.nom }}
+              </span>
+            </ng-container>
+            <a *ngIf="poste.competences.length > 3 && !showAllCompetences" (click)="toggleCompetences()" class="view-more-link">Voir plus</a>
+            <a *ngIf="poste.competences.length > 3 && showAllCompetences" (click)="toggleCompetences()" class="view-less-link">Voir moins</a>
+          </div>
+        </td>
+        <td class="poste-titre">{{ poste.typeContrat }}</td>
+        <td>
+          <button (click)="ToPostId(poste.id)" type="button" class="btn btn-inverse-info btn-icon">
+            <i class="mdi mdi-eye"></i>
+          </button>
+          &nbsp;
+          <button (click)="ToEdit(poste.id)" type="button" class="btn btn-inverse-primary btn-icon">
+            <i class="mdi mdi-pencil-box"></i>
+          </button>
+          &nbsp;
+          <button (click)="onDelete(poste.id)" type="button" class="btn btn-inverse-danger btn-icon">
+            <i class="mdi mdi-trash-can"></i>
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<ng-template #noPosts>
+  <p>Aucun poste n'est disponible.</p>
+</ng-template>
+
  
    
  
