--- a/src/app/Collaborateur/Annuel/mes-entretiens-annuel-collab/mes-entretiens-annuel-collab.component.html
+++ b/src/app/Collaborateur/Annuel/mes-entretiens-annuel-collab/mes-entretiens-annuel-collab.component.html
@@ -1,16 +1,17 @@
 <div class="container">
-    <div class="row">
+  <div class="col-12 mb-4">
+    <h2 style="font-size: 24px; font-weight: bold; color: #333; margin-bottom: 20px;">Mes Entretiens Annuels</h2>
+  </div>
+    <div class="row" *ngIf="entretiens.length > 0; else noEntretiens">
+     
       <div *ngFor="let entretien of entretiens" class="col-md-4 mb-4">
         <div class="card">
           <div class="card-body">
             <div class="d-flex justify-content-between mb-3">
               <h5 class="card-title">{{ entretien.nomManager }}
                 {{ entretien.prenomManager }}</h5>
-  
             </div>
-  
-           
-            <p class="card-text">
+              <p class="card-text">
               <i class="mdi mdi-calendar-range"></i> Date:
               {{ entretien.entretien.dateEntretien }}
             </p>
@@ -37,5 +38,12 @@
         </div>
       </div>
     </div>
+    <ng-template #noEntretiens>
+      <div class="row">
+        <div class="col-md-12">
+          <p>Vous n'avez aucun entretien pour le moment</p>
+        </div>
+      </div>
+    </ng-template>
   </div>
   
