--- a/src/app/Manager/Annuel/mes-entretien-annuel-manager/mes-entretien-annuel-manager.component.html
+++ b/src/app/Manager/Annuel/mes-entretien-annuel-manager/mes-entretien-annuel-manager.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class="col-12 mb-4">
+    <h2 style="font-size: 24px; font-weight: bold; color: #333; margin-bottom: 20px;">Mes Entretiens Annuels</h2>
+  </div>
     <div class="row">
       <div *ngFor="let entretien of entretiens" class="col-md-4 mb-4">
         <div class="card">
