--- a/src/app/Manager/add-fiche-de-poste/add-fiche-de-poste.component.html
+++ b/src/app/Manager/add-fiche-de-poste/add-fiche-de-poste.component.html
@@ -138,7 +138,7 @@
 
             </form>
            </div>
-           <div class="d-flex justify-content-end">
+           <div class="d-flex justify-content-end" *ngIf="currentStep === 2">
             <button type="submit" class="btn btn-primary mr-2">Ajouter</button>
           </div>
         
