--- a/src/app/Manager/dashboard-manager-service/dashboard-manager-service.component.html
+++ b/src/app/Manager/dashboard-manager-service/dashboard-manager-service.component.html
@@ -67,7 +67,10 @@
     <div class="card">
       <div class="card-body">
         <p class="card-title">Nombre de candidat par poste</p>
-        <div id="cash-deposits-chart-legend" class="d-flex justify-content-center pt-3"></div>
+        <div
+          id="cash-deposits-chart-legend"
+          class="d-flex justify-content-center pt-3"
+        ></div>
         <mat-card class="score-test-technique-card">
           <mat-card-header>
             <mat-card-title> </mat-card-title>
@@ -98,7 +101,7 @@
           </tbody>
         </table>
       </div>
-  
+
       <div *ngIf="topThreeSoftSkills">
         <table class="table">
           <thead>
@@ -117,5 +120,4 @@
       </div>
     </div>
   </div>
-  
 </div>
