--- a/src/app/Manager/quiz/update-quiz/update-quiz.component.html
+++ b/src/app/Manager/quiz/update-quiz/update-quiz.component.html
@@ -1,17 +1,30 @@
 <div class="container">
-    <h2>Edit Quiz</h2>
-    <form [formGroup]="quizForm" (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="title">Title:</label>
-        <input type="text" class="form-control" id="title" formControlName="title">
-      </div>
-      <div class="form-group">
-        <label for="description">Description:</label>
-        <input type="text" class="form-control" id="description" formControlName="description">
-      </div>
-    
-     
-      <button type="submit" class="btn btn-primary">Update</button>
-    </form>
+  <div class="card">
+    <div class="card-header">
+      <h2 class="card-title">Mettre a jour le Test</h2>
+    </div>
+    <div class="card-body">
+      <form [formGroup]="quizForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="title">Title:</label>
+          <input
+            type="text"
+            class="form-control"
+            id="title"
+            formControlName="title"
+          />
+        </div>
+        <div class="form-group">
+          <label for="description">Description:</label>
+          <textarea
+            class="form-control"
+            id="description"
+            formControlName="description"
+            rows="5"
+          ></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Mettre a jour</button>
+      </form>
+    </div>
   </div>
-  
+</div>
