--- a/src/app/Manager/quizQuestions/update-question/update-question.component.html
+++ b/src/app/Manager/quizQuestions/update-question/update-question.component.html
@@ -1,106 +1,58 @@
-<div class="container mt-2">
-    <div class="row">
-      <div class="col-lg-8 offset-lg-2">
-        <div>
-          <div class="mat-headline text-center">Update Question</div>
-          <div>
-            Enter the details of new question
-          </div>
-          <div>
-            <form *ngIf="question" (ngSubmit)="updateSubmit()">
-              <mat-form-field class="full-width" appearance="outline">
-                <mat-label>Question</mat-label>
-                <textarea
-                  matInput
-                  placeholder="Enter Question/Content here"
-                  rows="5"
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-lg-8 offset-lg-2">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title text-center mb-4">Modifier la Question</h2>
+          <div class="text-center mb-3"></div>
+          <form *ngIf="question" (ngSubmit)="updateSubmit()">
+            <div class="form-group">
+              <label for="content">Question</label>
+              <textarea
+                class="form-control"
+                id="content"
+                rows="5"
+                required
+                [(ngModel)]="question.content"
+                name="content"
+                placeholder="Enter Question/Content here"
+              ></textarea>
+            </div>
+            <div class="form-row">
+              <div *ngFor="let option of [question.option1, question.option2, question.option3, question.option4]; let i = index" class="form-group col-md-6">
+                <label for="option{{i+1}}">Option {{i+1}}</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="option{{i+1}}"
                   required
-                  [(ngModel)]="question.content"
-                  name="content"
-                ></textarea>
-              </mat-form-field>
-              <div class="row">
-                <div class="col-md-6">
-                  <mat-form-field class="full-width" appearance="outline">
-                    <mat-label>Option 1</mat-label>
-                    <input
-                      matInput
-                      placeholder="Enter Option 1 here"
-                      required
-                      [(ngModel)]="question.option1"
-                      name="option1"
-                    />
-                  </mat-form-field>
-                </div>
-                <div class="col-md-6">
-                  <mat-form-field class="full-width" appearance="outline">
-                    <mat-label>Option 2</mat-label>
-                    <input
-                      matInput
-                      placeholder="Enter Option 2 here"
-                      required
-                      [(ngModel)]="question.option2"
-                      name="option2"
-                    />
-                  </mat-form-field>
-                </div>
+                  [(ngModel)]="question['option' + (i+1)]"
+                  name="option{{i+1}}"
+                  placeholder="Enter Option {{i+1}} here"
+                />
               </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <mat-form-field class="full-width" appearance="outline">
-                    <mat-label>Option 3</mat-label>
-                    <input
-                      matInput
-                      placeholder="Enter Option 3 here"
-                      required
-                      [(ngModel)]="question.option3"
-                      name="option3"
-                    />
-                  </mat-form-field>
-                </div>
-                <div class="col-md-6">
-                  <mat-form-field class="full-width" appearance="outline">
-                    <mat-label>Option 4</mat-label>
-                    <input
-                      matInput
-                      placeholder="Enter Option 4 here"
-                      required
-                      [(ngModel)]="question.option4"
-                      name="option4"
-                    />
-                  </mat-form-field>
-                </div>
-              </div>
-              <mat-form-field class="full-width" appearance="outline">
-                <mat-label>Select Answer</mat-label>
-                <select
-                  matInput
-                  required
-                  [(ngModel)]="question.answer"
-                  name="answer"
-                >
-                  <option *ngIf="question.option1" [value]="question.option1">
-                    {{ question.option1 }}</option
-                  >
-                  <option *ngIf="question.option2" [value]="question.option2">
-                    {{ question.option2 }}</option
-                  >
-                  <option *ngIf="question.option3" [value]="question.option3">
-                    {{ question.option3 }}</option
-                  >
-                  <option *ngIf="question.option4" [value]="question.option4">
-                    {{ question.option4 }}</option
-                  >
-                </select>
-              </mat-form-field>
-              <button mat-raised-button color="primary" class="full-width">
-           
-                update
-              </button>
-            </form>
-          </div>
+            </div>
+            <div class="form-group">
+              <label for="answer">Sélectionnez la réponse</label>
+              <select
+                class="form-control"
+                id="answer"
+                required
+                [(ngModel)]="question.answer"
+                name="answer"
+              >
+                <option *ngFor="let option of [question.option1, question.option2, question.option3, question.option4]" [value]="option">
+                  {{ option.split('').join(' ') }} <!-- Sépare les lettres par un espace -->
+                </option>
+              </select>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">
+              Mettre à jour
+            </button>
+          </form>
+          
         </div>
       </div>
     </div>
   </div>
-  
+</div>
