--- a/src/app/menu/collab-menu/collab-menu.component.html
+++ b/src/app/menu/collab-menu/collab-menu.component.html
@@ -98,38 +98,31 @@
             <span class="count"></span>
           </a>
           <div
-            style="width:300px"
             class="dropdown-menu dropdown-menu-right navbar-dropdown"
             aria-labelledby="messageDropdown"
           >
             <p class="mb-0 font-weight-normal float-left dropdown-header">
               Messages
             </p>
-            <input
-              type="text"
-              [(ngModel)]="searchTerm"
-              (ngModelChange)="onSearchTermChange()"
-              placeholder="Rechercher un utilisateur"
-              class="form-control"
-            />
-            <div class="user-list">
-              <ng-container *ngFor="let user of filteredUsers; let i = index">
-                <a class="dropdown-item" (click)="redirectionChat(user.id)">
-                  <div class="item-thumbnail">
-                    <img
-                      [src]="'assets/images/' + user.image"
-                      alt="image"
-                      class="profile-pic"
-                    />
-                  </div>
-                  <div class="item-content flex-grow">
-                    <h6 class="ellipsis font-weight-normal">
-                      {{ user.nom }} {{ user.prenom }}
-                    </h6>
-                  </div>
-                </a>
-              </ng-container>
-            </div>
+
+            <a
+              class="dropdown-item"
+              (click)="redirectionChat(user.id)"
+              *ngFor="let user of listUsers"
+            >
+              <div class="item-thumbnail">
+                <img
+                  [src]="'assets/images/' + user.image"
+                  alt="image"
+                  class="profile-pic"
+                />
+              </div>
+              <div class="item-content flex-grow">
+                <h6 class="ellipsis font-weight-normal">
+                  {{ user.nom }} {{ user.prenom }}
+                </h6>
+              </div>
+            </a>
           </div>
         </li>
         <li class="nav-item dropdown me-4">
@@ -193,10 +186,15 @@
             class="dropdown-menu dropdown-menu-right navbar-dropdown"
             aria-labelledby="profileDropdown"
           >
-            <a class="dropdown-item" [routerLink]="['/managerRh/profile']">
+            <a class="dropdown-item" [routerLink]="['/collaborateur/profile']">
+              <i class="mdi mdi-account-box-outline text-primary"></i>
+              Mon Profile
+            </a>
+            <a class="dropdown-item" [routerLink]="['/collaborateur/compte']">
               <i class="mdi mdi-settings text-primary"></i>
               Mon Compte
             </a>
+
             <a class="dropdown-item" (click)="logout()">
               <i class="mdi mdi-logout text-primary"></i>
               Se deconnecter
@@ -313,6 +311,14 @@
                   Rh
                 </a>
               </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  [routerLink]="['/collaborateur/mes-entretiens-annuels']"
+                >
+                  Annuel
+                </a>
+              </li>
             </ul>
           </div>
         </li>
@@ -336,28 +342,24 @@
       <div class="content-wrapper">
         <router-outlet></router-outlet>
       </div>
-      
+
       <!-- content-wrapper ends -->
       <!-- partial:partials/_footer.html -->
       <footer class="footer">
-        <div
-          class="d-sm-flex justify-content-center justify-content-sm-between"
-        >
-          <span
-            class="text-muted text-center text-sm-left d-block d-sm-inline-block"
-            >Copyright ©
-            <a href="https://www.bootstrapdash.com/" target="_blank"
-              >bootstrapdash.com </a
-            >2021</span
-          >
-          <span
-            class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"
-            >Only the best
-            <a href="https://www.bootstrapdash.com/" target="_blank">
-              Bootstrap dashboard
-            </a>
-            templates</span
-          >
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6 text-center text-lg-start">
+              <span class="text-muted"
+                >© 2024 4YOU Sopra HR. Tous droits réservés.</span
+              >
+            </div>
+            <div class="col-lg-6 text-center text-lg-end">
+              <span class="text-muted"
+                >Conçu avec <i class="mdi mdi-heart text-danger"></i> par votre
+                équipe Sopra HR</span
+              >
+            </div>
+          </div>
         </div>
       </footer>
       <!-- partial -->
