--- a/src/app/menu/formateur-menu/formateur-menu.component.html
+++ b/src/app/menu/formateur-menu/formateur-menu.component.html
@@ -132,52 +132,7 @@
               </div>
             </div>
           </li>
-          <li class="nav-item dropdown me-4">
-            <a
-              class="nav-link count-indicator dropdown-toggle d-flex align-items-center justify-content-center notification-dropdown"
-              id="notificationDropdown"
-              href="#"
-              data-bs-toggle="dropdown"
-            >
-              <i class="mdi mdi-bell mx-0"></i>
-              <span class="count" *ngIf="hasUnseenNotifications"></span>
-            </a>
-            <div
-              class="dropdown-menu dropdown-menu-right navbar-dropdown"
-              aria-labelledby="notificationDropdown"
-            >
-              <p class="mb-0 font-weight-normal float-left dropdown-header">
-                Notifications
-              </p>
-              <a
-                class="dropdown-item notification-item"
-                *ngFor="let notification of notifications"
-                [ngClass]="{
-                  'notification-unseen': !notification.seen,
-                  'notification-seen': notification.seen
-                }"
-                (click)="redirectToPage(notification)"
-              >
-                <div *ngIf="!notification.seen" class="notification-pill">
-                  Nouveau
-                </div>
-  
-                <div class="item-thumbnail">
-                  <img
-                    [src]="'assets/images/' + notification.sender.image"
-                    alt="image"
-                    class="profile-pic"
-                  />
-                </div>
-                <div class="item-content flex-grow">
-                  <h6 class="ellipsis font-weight-normal">
-                    {{ notification.sender.nom }} {{ notification.sender.prenom }}
-                  </h6>
-                  <div [innerHTML]="notification.message"></div>
-                </div>
-              </a>
-            </div>
-          </li>
+         
   
           <li class="nav-item nav-profile dropdown">
             <a
@@ -193,7 +148,7 @@
               class="dropdown-menu dropdown-menu-right navbar-dropdown"
               aria-labelledby="profileDropdown"
             >
-              <a class="dropdown-item" [routerLink]="['/managerRh/profile']">
+              <a class="dropdown-item" [routerLink]="['/formateur/profile']">
                 <i class="mdi mdi-settings text-primary"></i>
                 Mon Compte
               </a>
@@ -218,12 +173,7 @@
       <!-- partial:partials/_sidebar.html -->
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">
-              <i class="mdi mdi-home menu-icon"></i>
-              <span class="menu-title">Dashboard</span>
-            </a>
-          </li>
+        
   
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/formateur/all']">
@@ -237,31 +187,7 @@
               <span class="menu-title">Mes Sessions </span>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="pages/charts/chartjs.html">
-              <i class="mdi mdi-chart-pie menu-icon"></i>
-              <span class="menu-title">Charts</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="pages/tables/basic-table.html">
-              <i class="mdi mdi-grid-large menu-icon"></i>
-              <span class="menu-title">Tables</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="pages/icons/mdi.html">
-              <i class="mdi mdi-emoticon menu-icon"></i>
-              <span class="menu-title">Icons</span>
-            </a>
-          </li>
-  
-          <li class="nav-item">
-            <a class="nav-link" href="documentation/documentation.html">
-              <i class="mdi mdi-file-document-box-outline menu-icon"></i>
-              <span class="menu-title">Documentation</span>
-            </a>
-          </li>
+      
         </ul>
       </nav>
       <!-- partial -->
@@ -272,24 +198,20 @@
         <!-- content-wrapper ends -->
         <!-- partial:partials/_footer.html -->
         <footer class="footer">
-          <div
-            class="d-sm-flex justify-content-center justify-content-sm-between"
-          >
-            <span
-              class="text-muted text-center text-sm-left d-block d-sm-inline-block"
-              >Copyright ©
-              <a href="https://www.bootstrapdash.com/" target="_blank"
-                >bootstrapdash.com </a
-              >2021</span
-            >
-            <span
-              class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"
-              >Only the best
-              <a href="https://www.bootstrapdash.com/" target="_blank">
-                Bootstrap dashboard
-              </a>
-              templates</span
-            >
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-6 text-center text-lg-start">
+                <span class="text-muted"
+                  >© 2024 4YOU Sopra HR. Tous droits réservés.</span
+                >
+              </div>
+              <div class="col-lg-6 text-center text-lg-end">
+                <span class="text-muted"
+                  >Conçu avec <i class="mdi mdi-heart text-danger"></i> par votre
+                  équipe Sopra HR</span
+                >
+              </div>
+            </div>
           </div>
         </footer>
         <!-- partial -->
